--- a/docs/faststore/docs/getting-started/requirements.mdx
+++ b/docs/faststore/docs/getting-started/requirements.mdx
@@ -79,7 +79,7 @@ Now, check if the installation of Headless CMS plugins was successful by running
 >
 > - **For macOS users:** If you encounter problems, run `yarn config set ignore-engines true` to ignore the Node.js version incompatibility, then run `vtex plugins install cms` again.
 >
-> The recommendation is to use the latest Node.js version or a version higher than `15.0.0`.
+> We recommend using the latest Node.js version or a version greater than `15.0.0`.
 
 ### Step 4. Enabling the VTEX Intelligent Search app in your account
 
