Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/docs/getting-started/requirements.mdx
+++ b/docs/faststore/docs/getting-started/requirements.mdx
@@ -15,7 +15,7 @@ The VTEX IO CLI is the command-line interface you'll use to manage your VTEX pro
 
 ### Step 2. Installing Headless CMS and its dependencies
 
-[Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview) is the content management solution for FastStore projects. During [project onboarding](https://developers.vtex.com/docs/guides/faststore/getting-started-overview), the integration between your project and Headless CMS is initiated.
+[Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview) is the content management solution for FastStore projects. During [project onboarding](https://developers.vtex.com/docs/guides/faststore/getting-started-overview), the integration between your project and Headless CMS is set up.
 
 To prevent content duplication that could cause build failures during project onboarding, it is important to confirm the installation of the following apps in your account:
 
@@ -53,7 +53,7 @@ Once the app and its dependency are installed, proceed to the [next step](#step-
 
 ### Step 3. Installing Headless CMS plugins
 
-To ensure you won't get errors while running Headless CMS commands in the CLI, install Headless CMS plugins by following these steps:
+To ensure you don't encounter errors while running Headless CMS commands in the CLI, install Headless CMS plugins by following these steps:
 
 1. Open the terminal and log in to your VTEX account using the VTEX IO CLI:
 
@@ -95,7 +95,7 @@ Based on the edition version, follow the instructions below.
 <details>
 <summary><b>Accounts using the `vtex.edition-store@5.x`</b></summary>
 
-If your account is using the `vtex.edition-store@5.x` major version, the VTEX Intelligent Search app is already included, and you need to integrate the app via VTEX Admin.
+If your account is using the `vtex.edition-store@5.x` major version, the VTEX Intelligent Search app is already included, and you must integrate it via VTEX Admin.
 
 To integrate VTEX Intelligent Search, go to the VTEX Admin, access **Store Settings > Intelligent Search > Integrations**, and click `START INTEGRATION`.
 
@@ -111,7 +111,7 @@ To integrate VTEX Intelligent Search, go to the VTEX Admin, access **Store Setti
     vtex install vtex.search-resolver@1.x vtex.admin-search@1.x
     ```
 
-After successfully installing the app, integrate it by accessing VTEX Admin, and navigating to **Store Settings > Intelligent Search > Integrations**, and click `START INTEGRATION`.
+After successfully installing the app, access VTEX Admin, navigate to **Store Settings > Intelligent Search > Integrations**, and click `START INTEGRATION`.
 
 </details>
 
