Fix Edition App and Edition Store mentions

--- a/docs/faststore/docs/getting-started/requirements.mdx
+++ b/docs/faststore/docs/getting-started/requirements.mdx
@@ -86,7 +86,7 @@ Now, check if the installation of Headless CMS plugins was successful by running
 The [VTEX Intelligent Search](https://help.vtex.com/tracks/vtex-intelligent-search) app enhances the user experience by providing accurate and personalized search results throughout the shopping journey.
 Before developing a storefront in FastStore, you need to enable the app in your account. For more information about Intelligent Search and its integration, please refer to the [VTEX Intelligent Search](https://help.vtex.com/tracks/vtex-intelligent-search) and [Integration Settings](https://help.vtex.com/en/tracks/vtex-intelligent-search--19wrbB7nEQcmwzDPl1l4Cb/6wKQgKmu2FT6084BJT7z5V) guides.
 
-To enable the app, check which version of the [Edition Store](https://developers.vtex.com/docs/guides/vtex-io-documentation-edition-app) is installed in your account.
+To enable the app, check which version of the [Edition App](https://developers.vtex.com/docs/guides/vtex-io-documentation-edition-app) is installed in your account.
 
 Based on the edition version, follow the instructions below.
 
@@ -118,7 +118,7 @@ After successfully installing the app, access VTEX Admin, navigate to **Store Se
 <details>
 <summary><b>Accounts wishing to migrate to the `5.x`</b></summary>
 
-If you are using a different major version and want to migrate, please [open a ticket with VTEX Support](https://help.vtex.com/en/support) and request the installation of the Edition app `vtex.edition-store@5.x`.
+If you are using a different major version and want to migrate, please [open a ticket with VTEX Support](https://help.vtex.com/en/support) and request the installation of the Edition Store `vtex.edition-store@5.x`.
 
 </details>
 
