--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -135,27 +135,6 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ### Variants
 
-#### Big
-
-<OverviewSection>
-  <Badge size="big">Big Badge</Badge>
-</OverviewSection>
-
-```tsx
-<Badge size="big">Big Badge</Badge>
-```
-
-<TokenTable>
-  <TokenRow
-    token="--fs-badge-big-text-size"
-    value="var(--fs-text-size-legend)"
-  />
-  <TokenRow
-    token="--fs-badge-big-padding"
-    value="var(--fs-spacing-1) var(--fs-spacing-2)"
-  />
-</TokenTable>
-
 #### Neutral
 
 <OverviewSection>
@@ -328,6 +307,32 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 </TokenTable>
 
 ---
+
+### Sizes
+
+Default size is `small`. Use `size="big"` for a larger badge.
+
+#### Big
+
+<OverviewSection>
+  <Badge size="big">Big Badge</Badge>
+</OverviewSection>
+
+```tsx
+<Badge size="big">Big Badge</Badge>
+```
+
+<TokenTable>
+  <TokenRow
+    token="--fs-badge-big-text-size"
+    value="var(--fs-text-size-legend)"
+  />
+  <TokenRow
+    token="--fs-badge-big-padding"
+    value="var(--fs-spacing-1) var(--fs-spacing-2)"
+  />
+  <TokenDivider />
+</TokenTable>
 
 ## Use Cases
 
