--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -130,7 +130,8 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
   <Badge variant="info">New arrival</Badge>
 </OverviewSection>
 ```tsx 
-import React from 'react' import {Badge} from '@faststore/ui'
+import React from 'react' 
+import {Badge} from '@faststore/ui'
 
 export default function BadgeBasicUsage() {
   return <Badge variant="info">New arrival</Badge>
