--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -60,7 +60,7 @@ Import the component from [@faststore/ui](/../docs/guides/faststore/components-i
 import { Badge } from "@faststore/ui";
 ```
 
-### Import Styles into your FastStore project
+### Import styles into your FastStore project
 
 To apply the styles of this component in your FastStore project, import the following into your stylesheet:
 
